fix autobreakline for too long msg

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
 
 /* Messages */
 
-
 .sent-mess{
     background-color: #D5F9BA;
     margin-left: 60%;
@@ -23,6 +22,13 @@
 .received-mess{
     background-color: #FFF;
     margin-right: 60%;
+}
+
+/* ! Fix per parola senza spazi che sforano */
+.text-message{
+    word-wrap: break-word;      /* IE 5.5-7 */
+    white-space: -moz-pre-wrap; /* Firefox 1.0-2.0 */
+    white-space: pre-wrap;      /* current browsers */
 }
 
 .date{
